# high-school-story

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  Directory.Build.props  Directory.Packages.props  High School Story.csproj  High School Story.sln  README.md  STYLEGUIDE.md  build.gradle.kts  icon.svg.import  mani.yaml  opencode.json  project.godot
.backlog/: config.yml
.backlog/completed/: hss-10 - Document-docs-design-as-design-documentation-target.md  (+17 more)
.codex/: config.toml
.obsidian/: appearance.json  github-sync-metadata.json
.opencode/agent/: developer.md  (+12 more)
_bmad/: config.toml  config.user.toml
_bmad-output/: brainstorming-session-2026-06-09-product-vision.md  brainstorming-session-2026-06-09.md  brainstorming-session-2026-06-12.md  brainstorming-session-2026-06-13.md  brainstorming-session-2026-06-14.md  brainstorming-session-2026-06-24T14-13-17.md  game-architecture-project-context-draft.md  game-architecture.md  gds-workflow-status.yaml  narrative-design.md  project-context.md
docs/: PROJECT_STATUS.md  ai-agent-guide.md  architecture.md  codex-gitnexus-selfhosted.md  codex-llamaindex-docs-rag.md  codex-mem0-selfhosted.md  component-inventory.md  development-guide.md  development-workflow.md  game-architecture.md  game-brief.md  game-design.md  implementation.md  index.md  narrative-content.md  narrative-design.md  project-overview.md  source-tree-analysis.md  ux-design.md  ux-experience.md
lwjgl3/: build.gradle.kts
tools/docs-rag/: pyproject.toml
tools/docs-rag/src/hss_docs_rag/: __init__.py  cli.py  config.py  indexer.py  server.py
(+365 files in other folders)
